Configuração das urls através de arquivos, para permitir configuração no ambiente de produção. Arquivos environment.ts e environment.production.ts no frontend e uso do arquivo Environment.java no backend.